--- a/src/app/loader/loader.component.html
+++ b/src/app/loader/loader.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="disclaimer" id="disclaimer">
+<div class="disclaimer" id="disclaimer">
   <div class="disclaimer__block">
     <div class="disclaimer__block__message">
       <h1>MESSAGE IMPORTANT !</h1>
@@ -12,7 +12,7 @@
       ENTRER SUR LE SITE
     </div>
   </div>
-</div> -->
+</div>
 
 <div class="loading" id="loading">
   <div class="neon">
